--- a/php/public/Admin/css/style2.css
+++ b/php/public/Admin/css/style2.css
@@ -230,11 +230,10 @@ aatable.dataTable{	border-collapse:collapse;	}
 
 .sbox_2{	background:#F7F8FA;	margin:20px 2.5% 0;	border:1px solid #E5E5E5;	aheight:39px;	line-height:39px;	font-size:14px;		}
 .sbox_2 .l{		float:left;		color:#333333;	font-weight:400;	margin:0 0 0 20px;	}
-.sbox_2 .m{		afloat:left;		margin-left:10px;
-	display:block;	margin-left:80px;	}
+.sbox_2 .m{		afloat:left;		margin-left:10px;	display:block;	margin-left:80px;	}
 .sbox_2 .m li{	float:left;		margin:7px 5px 0 0;	}
-.sbox_2 .m li a{	float:left;	height:25px;	line-height:25px;	padding:0 30px 0 10px;	color:#fff;	background:url(/images/del1.png) no-repeat 88% 9px #2D9FDD;
-	border-radius:3px;}
+.sbox_2 .m li a{	float:left;	height:25px;	line-height:25px;	padding:0 30px 0 10px;	color:#fff;
+	background:url(../images/del1.png) no-repeat 88% 9px #2D9FDD;	border-radius:3px;}
 .sbox_2 .r{		float:right;	margin:0 20px 0 5px;	}
 .sbox_2 .r b{	color:#ff0000;	font-weight:400;	}
 
@@ -249,7 +248,7 @@ aatable.dataTable{	border-collapse:collapse;	}
 .sbox_3_table table tr{	border-bottom:1px dashed #E6E6E6;	}
 .sbox_3_table table thead{	background:#F7F8FA;	border:1px solid #e5e5e5;	height:38px;	line-height:38px;	}
 .sbox_3_table table th{		font-weight:400;	text-align:center;	vertical-align:middle;	font-size:14px;		color:#333;	}
-.sbox_3_table table td{		font-weight:400;	text-align:center;	vertical-align:middle;	padding:30px 0;	}
+.sbox_3_table table td{		font-weight:400;	text-align:center;	vertical-align:middle;	padding:25px 0;	}
 td.sbox_3_t1{	font-size:16px;		}
 td.sbox_3_t2{		font-size:14px;	}
 td.sbox_3_t3{		font-size:14px;	}
@@ -271,7 +270,7 @@ td.sbox_3_t6,td.sbox_3_t7,td.sbox_3_t8{	color:#f00;		font-size:16px;	}
 
 .sbox_5 .WIn2{		margin:30px 2.5% 0;	width:auto;	}
 .sbox_5 .WIn2 h2{	font-size:18px;		font-weight:400;	margin-top:0;	border-bottom:1px solid #D9E1EB;	}
-.sbox_5 .WIn2 .WMain1{	width:auto;	border-radius:5px;	}
+.sbox_5 .WIn2 .WMain1{	awidth:auto;	border-radius:0 0 5px 5px;	}
 .sbox_5 .WMain3 p{	width:115px;		}
 .sbox_5 .WIFN1{		width:55%;		}
 .sbox_5 .WMain3{	margin:16px auto;	width:100%;	}
@@ -291,6 +290,8 @@ select.sel_t1 option{		}
 .btn_sub_w{		padding:40px 0 20px;	text-align:center;		}
 .btn_sub{		background:none;	border:none;	cursor:pointer;	}
 
+.sbox_5 .WMain3 p{	width:100px;	text-align:right;	padding-right:45px;	}
+.sbox_5 .WMain3_1>div{	margin-left:145px;	}
 
 /*	问答任务列表	*/
 table.table_in1_2{	margin:0 auto;	border-left:1px solid #F2F2F2;	border-right:1px solid #F2F2F2;	}
@@ -304,11 +305,12 @@ table.table_in1_2 select{	padding:0 6px 0 10px;	}
 .page_1_2 span.sus, .page_1_2 a{	float:none;	}
 
 /*	问答任务添加	*/
+.WIn2 h2{	border:1px solid #E9F3FF;	border-width:0 1px;	}
 table.table_in3{	width:100%;		margin:1px 1px 0;	background:#fff;	}
 .table_in3 tr{	margin-bottom:2px;	}
 .table_in3 tr th{	height:40px;	vertical-align:middle;	text-align:center;	font-size:14px;		background:#F2F2F2;	font-weight:400;	}
 .table_in3 tr td{	aheight:60px;	vertical-align:middle;	text-align:center;	font-size:14px;	padding:10px 0;	line-height:25px;	}
-.table_in3 tr td:nth-child(1) img{	    width:40px;	height:20px;	overflow:hidden;	margin-right:10px;	}
+.table_in3 tr td img{	    width:40px;	height:20px;	overflow:hidden;	margin-right:10px;	}
 .table_in3 tr td:nth-child(1){	width:22%; 	}
 .table_in3 tr td:nth-child(2){	width:25%; 	}
 .table_in3 tr td:nth-child(3){	width:25%;	padding:10px 0 9px 0;	}
@@ -323,7 +325,8 @@ select.sel_2{	border:1px solid #E5E5E5;	border-radius:5px;	height:30px;	line-hei
 	width:auto;	text-align:center;	text-indent:0px;	padding:0 8px;	}
 .txt6{	border:1px solid #E5E5E5;	border-radius:5px;	height:30px;	line-height:30px;	width:32%;	padding:0 6px;	}
 .sbox_5 .txt2_2{	border:1px solid #E5E5E5;	border-radius:5px;		}
-.WMain2_weixin .WMain3 p{	width:140px;	text-align:right;	margin-right:17px;	}
+.WMain2_weixin .WMain3 p{	width:140px;	text-align:right;	margin-right:17px;
+	padding-right:0;	}
 .WMain2_weixin .WMain3_2{	margin-bottom:5px;	}
 .WMain2_weixin .WMain3 label{	position:relative;	top:1px;		}
 .WMain2_weixin .WMain3_2>span{	line-height:1.5;	padding-top:6px;	display:inline-block;	margin-left:157px;	}
@@ -331,6 +334,11 @@ select.sel_2{	border:1px solid #E5E5E5;	border-radius:5px;	height:30px;	line-hei
 	border:1px solid #ddd;	width:80px;	cursor:pointer;	}
 .txt8{	background:#2856B6;	font-size:14px;	color:#fff;	text-align:center;	border-radius:5px;	padding:0;	line-height:30px;	height:30px;
 	border:1px solid #ddd;	width:80px;	cursor:pointer;	}
+.txt_up{	position:relative;		}
+.txt_up .input_file{	position:absolute;	left:0;	top:0;	width:80px;	height:30px;	cursor:pointer;		opacity:0;	filter:alpha(opacity=0);	}
+.txt_up .path_file{		abackground:red;	margin:0 0 0 8px;	border:none;	padding:0;	width:auto;	adisplay:block;	}
+
+	
 .WMain2_weixin .WMain3_1>div{	margin-left:157px;	}
 .WMain2_weixin .WMain3_2>div{	margin-left:157px;	}
 .tarea_1{	width:62%;	height:133px;	padding:5px 6px;	aaborder:1px solid #CCCCCC;	border:1px solid #e5e5e5;	border-radius:5px;	line-height:1.6;	}
@@ -339,7 +347,7 @@ select.sel_2{	border:1px solid #E5E5E5;	border-radius:5px;	height:30px;	line-hei
 .left_div .txt6{	width:43%;	}
 .left_div .tarea_1{	width:92%;		}
 .left_div span{		margin-right:15px;	}
-#right_pic{		abackground:url(/images/phone.jpg) no-repeat 0 0;	width:218px;	width:23%;	aheight:470px;	float:right;	margin-top:15px;
+#right_pic{		abackground:url(../images/phone.jpg) no-repeat 0 0;	width:218px;	width:23%;	aheight:470px;	float:right;	margin-top:15px;
 	background-size:contain;	margin-bottom:25px;	}
 #right_pic img{	width:100%;	height:auto;	max-width:218px;	float:right;	}
 
@@ -363,7 +371,7 @@ select.sel_2{	border:1px solid #E5E5E5;	border-radius:5px;	height:30px;	line-hei
 
 /*	秒拍任务_搜索到顶	*/
 .sub1_2{	font-size:16px;	}
-.ndt_mps{	margin-top:-10px;	background:url(/images/bg_line2.gif) repeat-x 0 0 #fff;	}
+.ndt_mps{	margin-top:-10px;	background:url(../images/bg_line2.gif) repeat-x 0 0 #fff;	}
 .mps{		font-size:14px;	padding:16px 30px 0;	}
 .mps_t{		background:#F7F8FA;	border:1px solid #e5e5e5;	padding:6px 10px;	line-height:26px;	}
 .mps_t label{		margin-right:10px;	}
@@ -372,7 +380,7 @@ select.sel_2{	border:1px solid #E5E5E5;	border-radius:5px;	height:30px;	line-hei
 .mps_t .r{			float:right;	}
 .mps_t .r span{	float:left;	margin-right:1px;	line-height:24px;	cursor:pointer;	}
 .mps_t .r span.sp1{		border:1px solid #ccc;	padding:0px 10px;	background:#fff;	font-size:12px;	}
-.mps_t .r span.sp2{		border:1px solid #ccc;	padding:0px 30px 0 10px;	font-size:12px;	background:url(/images/arr2.gif) no-repeat right 9px center #fff;	}
+.mps_t .r span.sp2{		border:1px solid #ccc;	padding:0px 30px 0 10px;	font-size:12px;	background:url(../images/arr2.gif) no-repeat right 9px center #fff;	}
 
 .mps_m{		margin-top:0px;	background:#fff;	}
 .mps_item{		padding:30px 0;	border-bottom:1px dotted #E6E6E6;		}
@@ -449,29 +457,18 @@ td.sbox_3_t1 img{	margin-right:5px;	}
 
 /*	媒体供应商_添加资源	*/
 ul.add_resource{		margin:23px 0 0 25px;	float:left;	}
-ul.add_resource li{		background:url(/images/arr_add.gif) no-repeat left 0 #2c9fdd;	float:left;	margin:0 10px 5px 0;	height:30px;	border-radius:5px;	}
+ul.add_resource li{		background:url(../images/arr_add.gif) no-repeat left 0 #2c9fdd;	float:left;	margin:0 10px 5px 0;	height:30px;	border-radius:5px;	}
 ul.add_resource li a{	font-size:14px;	font-weight:400;	color:#ffffff;	height:30px;	line-height:30px;	float:left;	padding:0 20px 0 50px;	}
 .tab1 strong.l{		float:left;	font-size:18px;	color:#333;	font-weight:700;	line-height:54px;	padding:0 30px;	}
 .search_3{	font-size:14px;	height:30px;	line-height:30px;	margin:12px 10px 10px 0px;	display:block;	padding-top:0px;	float:right;	}
 .sub6{		width:85px;	height:30px;	float:left;	line-height:30px;	text-align:center;		border-radius:0 5px 5px 0;	border:none;
 	background:#2C9FDD;	color:#fff;		font-size:14px;	cursor:pointer;	}
-/*
-width: 40px;
-    height: 30px;
-    float: left;
-    line-height: 30px;
-    overflow: hidden;
-    background: url(../images/sub2.png) no-repeat center center #6E7991;
-    border: none;
-    border-radius: 0 6px 6px 0;
-    cursor: pointer;
-*/
 
 /*	右边漂浮	*/
 .float_serv{	background:#fff;	position:fixed;	right:-1px;	top:140px;	width:50px;	min-height:50px;	border:1px solid #CCCCCC;	z-index:1000;	}
 .float_serv ul{		}
 .float_serv ul li{		float:left;	width:50px;	height:50px;	border-top:1px solid #ccc;	}
-.float_serv ul li a{	float:left;	width:50px;	height:50px;	background-image:url(/images/bg_serv.gif);	}
+.float_serv ul li a{	float:left;	width:50px;	height:50px;	background-image:url(../images/bg_serv.gif);	}
 .float_serv ul li.serv_1{	border-top:none;		}
 .float_serv ul li.serv_1 a{	abackground-position:0 0px;		}
 .float_serv ul li.serv_2 a{	background-position:0 -54px;	}
@@ -492,7 +489,7 @@ a.txt9_2{	background:#2C9FDD;		margin-left:10px;	}
 .table_in1{	margin-left:0;	margin-right:0;	}
 .distable thead tr{	border-bottom:1px solid #F2F2F2;	}
 .distable tbody tr{	border:1px solid #F2F2F2;	}
-.distable th{	background:url(/images/bg_line3.gif) repeat-x 0 0;		}
+.distable th{	background:url(../images/bg_line3.gif) repeat-x 0 0;		}
 
 /*	订单支付	*/
 .table_in1 td.alignleft{		text-align:left;	padding:0 30px;	}
@@ -567,8 +564,8 @@ ul.ul_table1 li span.sp1{	width:10%;	margin-left:5%;	text-align:left;	color:#333
 ul.ul_table1 li span.sp2{	width:50%;	margin-left:5%;	font-size:12px;	color:#999999;	padding-bottom:8px;	}
 ul.ul_table1 li span.sp3{	width:10%;	margin-left:8%;	text-align:left;	color:#02ac0a;	}
 	ul.ul_table1 li span.sp3 i{			font-style:normal;	display:block;	}
-	ul.ul_table1 li span.sp3 i.ok{		color:#02ac0a;	background:url(/images/ok.png) no-repeat 0 3px;		text-indent:25px;	}
-	ul.ul_table1 li span.sp3 i.not-ok{	color:#ff5a00;	background:url(/images/notok.png) no-repeat 0 3px;	text-indent:25px;	}
+	ul.ul_table1 li span.sp3 i.ok{		color:#02ac0a;	background:url(../images/ok.png) no-repeat 0 3px;		text-indent:25px;	}
+	ul.ul_table1 li span.sp3 i.not-ok{	color:#ff5a00;	background:url(../images/notok.png) no-repeat 0 3px;	text-indent:25px;	}
 ul.ul_table1 li span.sp4{	width:6%;	margin-left:3%;	margin-right:3%;	float:right;	text-align:left;	color:#999;	}
 
 /*	个人-安全设置-邮箱	*/
@@ -582,9 +579,85 @@ ul.ul_table1 li span.sp4{	width:6%;	margin-left:3%;	margin-right:3%;	float:right
 	color:#999;	}
 .safe_2 .sel_2{	width:45%;	padding:0 2%;	height:32px;	line-height:32px;	}
 
-.img_up{			}
-.img_up a{			}
-.img_up a img{			}
+.safe_2 .WMain3 .img_up{		position:relative;	padding:0;	}
+.img_up img{	width:90px;	height:110px;		}
+.img_up .input_file{		position:absolute;	left:0;	top:0;	width:90px;	height:110px;	opacity:0;	filter:alpha(opacity=0);	cursor:pointer;	}
+.img_up .path_file{		background:none;	margin:8px 0 0;	border:none;	padding:0;	width:100%;	}
+
+
+
+/*	电视媒体	*/
+.WMain1{		}
+.list_column{		display:block;	overflow:hidden;	aborder:1px solid #eee;	}
+.list_column ul{	float:left;		padding:25px 0 0 2%;	width:102%;	}
+.list_column ul li{		float:left;	margin:0 30px 12px 0;	width:160px;	font-size:14px;	}
+.list_column ul li a{	float:left;		height:27px;	line-height:27px;	padding:0 12px;	color:#333;	background:#fff;	border-radius:3px;			}
+.list_column ul li a.cur{	color:#fff;	background:#2D9FDD;	}
+.WMain2 .WMain3_2 .remark{	margin:0 0 0 15px;	color:#999999;	}
+.WMain2 .WMain3_2 .remark_br{	color:#999999;	}
+
+.sbox_1_item:first-child{	border-radius:6px 6px 0 0;	}
+.sbox_1_item:last-child{	border-radius:0 0 6px 6px;	}
+.sbox_1_item{	background:url(../images/bg_sbox_1_item.gif) repeat-y 0 0 #fff;}
+.sbox_1_item_showall{	height:auto;	background:url(../images/bg_sbox_1_item.gif) repeat-y 0 0 #fff;}
+.sbox_1_item_showall .m{	margin-right:0;	}
+.sbox_1_item_showall .m ul{	height:auto;	}
+
+
+/*	记者预约	*/
+.sbox_1_item .l2{		}
+.sbox_1_item .l2 strong{	atext-align:center;	margin:16px 0 0px 20px;	line-height:20px;	}
+.sbox_1_item .l2 strong i{	display:block;	color:#ff4a50;	font-style:normal;	text-align:center;	margin-left:-5px;	}
+
+table.table_row6{	width:100%;		margin:1px 1px 0;	background:#fff;	}
+.table_row6 tr{	margin-bottom:2px;	}
+.table_row6 tr th{	height:40px;	vertical-align:middle;	text-align:center;	font-size:14px;		background:#F2F2F2;	font-weight:400;	}
+.table_row6 tr td{	aheight:60px;	vertical-align:middle;	text-align:center;	font-size:14px;	padding:10px 0;	line-height:25px;	}
+.table_row6 tr td img{	width:40px;	height:20px;	overflow:hidden;	margin-right:10px;	}
+.table_row6 tr td.del{	width:10%;	text-align: center;	line-height: 25px;	apadding: 10px 0;	font-size: 30px;	color: #999;	font-weight:400;	}
+.table_row6 tr:nth-child(even){	background:#F9F9F9;	}
+.table_row6 select{	height:28px;	line-height:30px;	border:1px solid #ccc;	background:#fff;	padding:0 6px 0 10px;	font-size:14px;	}
+
+
+/*	平面媒体	*/
+.list_column2{		display:block;	overflow:hidden;	}
+.list_column2 ul{	float:left;		padding:25px 0 0 2%;	width:102%;	}
+.list_column2 ul li{	float:left;		margin:0 90px 12px 0;	width:auto;	font-size:14px;	}
+.list_column2 ul li a{	float:left;		height:27px;	line-height:27px;	padding:0 20px;	color:#333;	background:#fff;	border-radius:3px;			}
+.list_column2 ul li a.cur{	color:#fff;	background:#2D9FDD;	}
+
+
+/*	线下媒体任务	*/
+.sbox_2_2{	background:#F7F8FA;	margin:30px 2.5% 0;	border:1px solid #E5E5E5;	aheight:39px;	line-height:39px;	font-size:14px;		}
+.sbox_2_2 .l{		float:left;		color:#333333;	font-weight:400;	margin:0 0 0 20px;	}
+.sbox_2_2 .m{		float:left;		margin-left:10px;	display:block;	margin-left:8px;		font-size:12px;	}
+.sbox_2_2 .m li{	float:left;		margin:7px 0px 0 0;	}
+.sbox_2_2 .m li a{	float:left;	height:24px;	line-height:24px;	padding:0 12px 0 12px;	color:#333;	background:#fff;	border:1px solid #CCCCCC;
+	margin-left:-1px;	}
+.sbox_2_2 .m li a.cur{	color:#fff;	padding:0 15px 0 10px;	border:1px solid #FF4150;
+	background:url(../images/order1.png) no-repeat right center #FF4A50;	}
+.sbox_2_2 .r{		float:right;	margin:7px 10px 7px 5px;	}
+.sbox_2_2 .r b{		color:#ff0000;	font-weight:400;	}
+.search{		}
+.search .key{	float:left;		height:24px;	line-height:26px;	overflow:hidden;	border:1px solid #ccc;	background:#fff;	padding:0 8px;	font-size:12px;	}
+.search .sub{	float:left;		height:26px;	line-height:25px;	overflow:hidden;	border:1px solid #ccc;	background:#F7F8FA;	padding:0 12px;	font-size:12px;	border-left:none;	cursor:pointer;	color:#333;	}
+
+.sbox_3_2{	margin:10px 2.5% 0;		}
+ul.list_art1{		}
+ul.list_art1 li{	padding:30px 0;	clear:both;	border-bottom:1px dashed #E6E6E6;	}
+aaul.list_art1 li:hover{	background:#F7F8FA;	}
+ul.list_art1 li .l{		float:left;	padding:2px 0 0;	}
+ul.list_art1 li .l img{	width:150px;	aheight:150px;	max-height:200px;	}
+ul.list_art1 li .r{		float:none;		display:block;	margin-left:180px;	}
+ul.list_art1 li .rt{	font-size:20px;	color:#333333;	line-height:24px;	font-weight:400;	}
+ul.list_art1 li .rm{	font-size:14px;	color:#999;	line-height:24px;	font-weight:400;	margin-top:10px;	}
+ul.list_art1 li .rm p{	font-size:14px;	color:#999;	line-height:24px;	font-weight:400;	padding:3px 0;	}
+ul.list_art1 li .rm strong{		font-weight:400;	color:#333;	}
+ul.list_art1 li .rb{		margin:10px 0 0;	}
+ul.list_art1 li .rb a{		color:#28b67c;	font-size:14px;	float:left;		margin-right:60px;	height:30px;	line-height:30px;	}
+ul.list_art1 li .rb a.more{	color:#333333;	font-size:12px;	float:right;	margin-right:0;		border:1px solid #CCCCCC;	padding:0 15px;	}
+
+
 
 
 
