--- a/php/public/Admin/css/style2.css
+++ b/php/public/Admin/css/style2.css
@@ -27,7 +27,7 @@ input{	color:#666;	}
 	width:100%;	height:0;	padding-bottom:12.7%;	border-radius:5px;		}
 .slideBox .bd{ position:relative; height:100%; z-index:0;   }
 .slideBox .bd li{ zoom:1; vertical-align:middle; }
-.slideBox .bd img{ display:block;	width:100%;	height:100%;	aborder-radius:5px;	}
+.slideBox .bd img{ display:block;	width:100%;	height:100%; aborder-radius:5px;top:0;}
 .slideBox .prev,
 .slideBox .next{ position:absolute; left:3%; top:50%; margin-top:-25px; display:block; width:32px; height:40px; background:url(../images/slider-arrow.png) -110px 5px no-repeat;
 	filter:alpha(opacity=50);opacity:0.5;   display:none;	}
@@ -71,8 +71,8 @@ input{	color:#666;	}
 .title1 strong a{	line-height:78px;		color:#333333;	text-decoration:none;	font-size:24px;	padding-left:23px;	border-left:7px solid #2C9FDD;	}
 .title1 strong i{	font-style:normal;	font-size:14px;	color:#ff6800;	float:right;	}
 
-#tb1{	width:800px;	height:500px;	margin:50px auto;	padding:0 0 50px;
-	width:80%;	height:500px;	}
+#tb1{	width:800px;	height:550px;	margin:50px auto;	padding:0 0 50px;
+	width:85%;	height:550px;	}
 
 /*	任务管理	*/
 .rwgl{		background:#fff;	}
@@ -130,6 +130,23 @@ aatable.dataTable{	border-collapse:collapse;	}
 .page_1 .next{	margin-left:18px;	}
 .page_1 a:hover,
 .page_1 a.cur{		background:#CCCCCC;	color:#fff;		border-radius:15px;	}
+
+.dataTables_info{		float:left;		margin:15px 0 15px 20px;	font-size:14px;	color:#555;	}
+#datatable1_paginate{	float:right;	margin:15px 20px 15px 0;	font-size:14px;	color:#555;		font-size:14px;	color:#555;	}
+#datatable1_paginate span.ellipsis,
+#datatable1_paginate a{		color:#333;		float:left;	height:30px;	line-height:30px;	padding:0 11px;	margin:0 1px;	}
+#datatable1_paginate a.previous,
+#datatable1_paginate a.next{		height:28px;	line-height:28px;	border:1px solid #E6E6E6;	border-radius:15px;		padding:0 16px;			}
+#datatable1_paginate a.first,
+#datatable1_paginate a.previous{	margin-right:5px;	}
+#datatable1_paginate a.next,
+#datatable1_paginate a.last{	margin-left:5px;	}
+#datatable1_paginate a:hover,
+#datatable1_paginate a.current{		background:#CCCCCC;	color:#fff!important;	color:#fff;		border-radius:15px;	border:1px solid #E6E6E6;	}
+#datatable1_paginate a.disabled,
+#datatable1_paginate a.disabled:hover{	color:#333!important;	color:#333;		border-color:#fff;	background:#fff;	}
+#datatable1_filter{	display:none;	}
+
 
 /*	新闻中心、盈利状况、联系我们	*/
 .box_1{		width:100%;		margin:20px auto 0;	}
